# sl-db-engine-spec

./: .gitignore  README.md  pyproject.toml
server/: README.md  SPEC.md  pyproject.toml
server/src/semantic_api/: __init__.py  __main__.py  app.py  auth.py  controllers.py  registry.py  schemas.py  serialization.py  service.py
src/sl_db_engine_spec/: __init__.py  adapter.py  dialect.py  engine_spec.py
